--- a/intex.html
+++ b/intex.html
@@ -18,10 +18,10 @@
                   </div>
                   <hr>
                   <span>Or</span>
-                <!-- <input type="text" placeholder="Phone,email or username" required>
-                <div class="btn"> Next</div>
-                <div class="btn">Forgot Password?</div>
-                <p>Don't have an account? <a href="#">Sign up</a></p> --> 
+                 <input type="text" placeholder="Phone,email or username" required class="inp">
+                <div class="btn3"> Next</div>
+                <div class="btn4">Forgot Password?</div>
+                <p>Don't have an account? <a href="#">Sign up</a></p> 
         </div>
     </div>
 </body>
