--- a/intex.html
+++ b/intex.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Twitter-login</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-                <img src="/images/bg remove/brand-download-img-1.jpg.twimg.1920-removebg-preview (1).png" alt="logo">
-                      <h2>Sign in to twitter</h2>
+                <div class="nav">
+                    <span></span>
+                    <img src="/images/bg remove/brand-download-img-1.jpg.twimg.1920-removebg-preview (1).png" alt="logo"></div>
+                      <h2>Sign in to Twitter</h2>
                   <div class="btn">
-                    <button class="btn1"><img src="/images/bg remove/google-icon-removebg-preview.png" alt="">  Sign in with Goolgle</button>
-                    <button class="btn2"> <img src="/images/bg remove/Apple-Logo-removebg-preview.png" alt=""> Sign in with Apple</button>
+                    <button class="btn1"><img src="/images/bg remove/google-icon-removebg-preview.png" alt=""> Sign in with Google</button>
+                    <button class="btn1 btn2"> <img src="/images/bg remove/Apple-Logo-removebg-preview.png" alt=""> Sign in with Apple</button>
                   </div>
                   <hr>
                   <span>Or</span>
-                 <input type="text" placeholder="Phone,email or username" required class="inp">
+                 <input type="text" placeholder="Phone,email,or username" required class="inp">
                 <div class="btn3"> Next</div>
                 <div class="btn4">Forgot Password?</div>
                 <p>Don't have an account? <a href="#">Sign up</a></p> 
